fix: изменил логику чата

--- a/src/app/features/chat/chat-popup/chat-popup.component.html
+++ b/src/app/features/chat/chat-popup/chat-popup.component.html
@@ -99,9 +99,7 @@
                     </header>
                   }
 
-                  <p class="chat-message__bubble">
-                    {{ message.text }}
-                  </p>
+                  <p class="chat-message__bubble" [innerHTML]="message.text"></p>
                 </div>
               </article>
             }
